fix - add decimal package and use for math, fixes bug for 4.1M case

--- a/HTML/test.html
+++ b/HTML/test.html
@@ -7353,7 +7353,7 @@
                                 ><strong
                                   data-e2e="video-views"
                                   class="video-count tiktok-1nb981f-StrongVideoCount e148ts222"
-                                  >17.8K</strong
+                                  >17.8k</strong
                                 >
                               </div>
                             </div></a
